--- a/tests/unit/domplate/domplate.html
+++ b/tests/unit/domplate/domplate.html
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<script src="../net/env.js"></script>
+    <script src="../env.js"></script>
+    <script type="text/javascript" src="chrome://firebug/content/domplate.js" ></script>
 <script>
 with (FBL) {
 function runTest()
