--- a/tests/content/firebug/activation.html
+++ b/tests/content/firebug/activation.html
@@ -1,8 +1,12 @@
 <html>
 <head>
-<title>Firebug Test Page HTML Wrapper</title>
+<title>Opening and Closing Firebug</title>
 <script type="application/x-javascript" src="activation.js"></script>
 </head>
 <body>
+<ul>
+<li><button type="button" onclick="openAndOpen();">Open Page and Open Firebug</button><span id="openAndOpen"></span></li>
+</ul>
+
 </body>
 </html>
