New test for Issue 1275 + better implementation of issue1256 test + helper env.js file for net panel tests.
git-svn-id: http://fbug.googlecode.com/svn@1891 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/content/tests/net/issue1256.html
+++ b/fbtest/branches/fbtest1.4/content/tests/net/issue1256.html
@@ -20,7 +20,8 @@ function runTest(callback)
         if (request.readyState == 4 && request.status == 200)
             setTimeout(function() {
                 document.getElementById("finished").innerHTML = "Request Finished";
-                callback(request);
+                if (callback)
+                    callback(request);
             }, 300);
     };
 
@@ -28,8 +29,6 @@ function runTest(callback)
     request.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
     request.send("param1=1 %2B 2");
 }
-if (window.opener && window.opener.onTestLoaded)
-    window.opener.onTestLoaded(window);
 </script>
 </body>
 </html>
