--- a/fbtest/branches/fbtest1.4/content/testConsole.html
+++ b/fbtest/branches/fbtest1.4/content/testConsole.html
@@ -5,11 +5,7 @@
 <head>
     <title>Firebug Test Console</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="chrome://firebug/skin/panel.css" type="text/css"/>
-    <link rel="stylesheet" href="chrome://fbtest/skin/testConsole.css" type="text/css"/>
-    <link rel="stylesheet" href="chrome://fbtest/skin/testList.css" type="text/css"/>
-    <link rel="stylesheet" href="chrome://fbtest/skin/testResult.css" type="text/css"/>
-    <link rel="stylesheet" href="chrome://fbtest/skin/tabView.css" type="text/css"/>
+    <link rel="stylesheet" href="chrome://fbtest/skin/base.css" type="text/css"/>
 </head>
 <body>
     <div id="testList"></div>
