--- a/fbtest/branches/fbtest1.4/content/testConsole.html
+++ b/fbtest/branches/fbtest1.4/content/testConsole.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="chrome://fbtest/skin/base.css" type="text/css"/>
 </head>
 <body>
-    <div id="testList"></div>
+<div id="testList"></div>
+<script type="text/javascript">
+/**
+ * Root directory of the test tree.
+ */
+var testHomeUrl = "file:///C:/mozilla-dev/extensions/FirebugTests/unit/";
+
+/**
+ * List of registered tests.
+ * @param: {String} category    Name of the category where the test belongs to.
+ * @param: {String} uri         Relative location of the test file.
+ * @param: {String} desc        Test description.
+ */
+var testList = [
+    {category: "examples", uri: "examples/exampleTest.html",    desc: "Simple test example." },
+    {category: "net", uri: "net/issue1256.js",                  desc: "Issue1256: Firebug displays spaces as plus signs in POST fields" },
+    {category: "firebug", uri: "firebug/activation.html",       desc: "Open/Close Firebug, Web pages; enable/disable panels"},
+    //{category: "script", uri: "script/scriptWatch.js",        desc: "Watch panel" },
+    {category: "net", uri: "net/issue1275.js",                  desc: "Issue1275: firebug does not show JSON answers from server" },
+    {category: "examples", uri: "examples/exampleNetTest.js",   desc: "Example of a Net panel test." },
+];
+</script>
 </body>
 </html>
