Properly load testRoot directory from testList.html and restart test server.
git-svn-id: http://fbug.googlecode.com/svn@1916 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/content/testConsole.html
+++ b/fbtest/branches/fbtest1.4/content/testConsole.html
@@ -13,7 +13,7 @@
 /**
  * Root directory of the test tree.
  */
-var testHomeUrl = "file:///C:/mozilla-dev/extensions/FirebugTests/unit/";
+var basePath = "chrome://firebugTests/content/";
 
 /**
  * List of registered tests.
