sync and get ready for next test
git-svn-id: http://fbug.googlecode.com/svn@1963 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/firebug/activation.html
+++ b/tests/content/firebug/activation.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <ul>
-<li><button type="button" onclick="openAndOpen();">Open Page and Open Firebug</button><span id="openAndOpen"></span></li>
+<li><button type="button" onclick="openAndOpen();">Open Page and Open Firebug</button><span id="openOpenCloseClose"></span></li>
 </ul>
 
 </body>
