Minor changes to test files.
git-svn-id: http://fbug.googlecode.com/svn@1972 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/net/issue1275.htm
+++ b/tests/content/net/issue1275.htm
@@ -30,6 +30,10 @@ function jsonRequest(callback)
 {
     try {
         request = new XMLHttpRequest();
+        request.onabort = function() {
+            // Never called in 3.0.6, but seems to be working in 3.1b2
+            //alert("aborted: " + request.responseText);
+        }
         request.onreadystatechange = function() {
             if (request.readyState == 4) {
                 if (request.status == 200) {
