add FBTestFirebug.js library; add test 1483; misc. test cases not part of test runner
git-svn-id: http://fbug.googlecode.com/svn@2027 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/content/wrapAJSFile.html
+++ b/fbtest/branches/fbtest1.4/content/wrapAJSFile.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Firebug Test Page HTML Wrapper</title>
+<script type="application/x-javascript" src="chrome://firebugTests/content/FBTestFirebug.js"></script>
 <script type="application/x-javascript" src="__replaceme__"></script>
 </head>
 <body>
