--- a/tests/issues/issue1129/content.htm
+++ b/tests/issues/issue1129/content.htm
@@ -47,6 +47,9 @@ body {
 	padding: 10px;
 	background: #E6Dff8;
 }
+.funny {
+    color:red;
+}
 </style>
 </head>
 <body class="">
@@ -68,7 +71,7 @@ body {
 								<table cellpadding="3" cellspacing="0">
 									<tbody>
 									<tr>
-										<td>Funny looking after reloading iFrame</td>
+										<td class="funny" >Funny looking after reloading iFrame</td>
 									</tr>
 									</tbody>
 								</table>
