add element to support FBTestFirebug.js
git-svn-id: http://fbug.googlecode.com/svn@2054 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/content/wrapAJSFile.html
+++ b/fbtest/branches/fbtest1.4/content/wrapAJSFile.html
@@ -5,5 +5,6 @@
 <script type="application/x-javascript" src="__replaceme__"></script>
 </head>
 <body>
+<span id="firebugTestElement"></span>
 </body>
 </html>
