--- a/tests/script/Event.html
+++ b/tests/script/Event.html
@@ -12,10 +12,41 @@
         var report = document.getElementById("report");
         report.innerHTML = "Fired "+count;
     }
+    function theAddedHandler(event)
+    {
+        var reportAdded = document.getElementById("reportAdded");
+        var count = ++(reportAdded.count);
+        reportAdded.innerHTML = "Fired "+  (count);
+    }
+    function addHandlers(event)
+    {
+        var reportAdded = document.getElementById("reportAdded");
+        reportAdded.count = 0;
+        var addToMe = document.getElementById("addToMe");
+        addToMe.addEventListener("click", theAddedHandler, true);
+
+        var reportAnonAdded = document.getElementById("reportAnonAdded");
+        reportAnonAdded.count = 0;
+        var addToAnon = document.getElementById("addToAnon");
+        addToAnon.addEventListener("click", function(event) 
+        {
+            var reportAnonAdded = document.getElementById("reportAnonAdded");
+            var count = ++(reportAnonAdded.count);
+            reportAnonAdded.innerHTML = "Fired "+  (count);
+        }, true);
+    }
+    window.addEventListener("load", function inlineLoadHandler(event) { addHandlers(); }, false);
+    
     </script>
     <body>
         <p>Browser generated events</p>
         <button onclick="fire()">Click to Fire</button><br />
         <p id="report"></p>
+        <p>addEventListener events</p>
+        <button id="addToMe">Click to Fire</button><br />
+        <p id="reportAdded"></p>
+        <p>addEventListener anonymous function events</p>
+        <button id="addToAnon">Click to Fire</button><br />
+        <p id="reportAnonAdded"></p>
     </body>
 </html>
