--- a/tests/unit/net/example.html
+++ b/tests/unit/net/example.html
@@ -2,13 +2,13 @@
 <head>
 <script>
 fireunit.ok(true, "Passing test result");
-fireunit.ok(false, "Failing test result.");
+//fireunit.ok(false, "Failing test result.");
 fireunit.compare("expected data", "expected data", 
     "Passing verification of expected and actual input.");
-fireunit.compare("<div>expected</div>", "<div>actual</div>", 
-    "Failing verification of expected and actual input.");
+//fireunit.compare("<div>expected</div>", "<div>actual</div>", 
+//    "Failing verification of expected and actual input.");
 
-fireunit.log("This is just a log message");
+//fireunit.log("This is just a log message");
 
 // Wait for asynchronous operation.
 setTimeout(function(){
