--- a/tests/content/script/breakpoints/testPage.html
+++ b/tests/content/script/breakpoints/testPage.html
@@ -5,14 +5,100 @@
 <body>
 <h1>Breakpoints Tests</h1>
 
-<p>Use the <b>Break Simple</b> button to test <i>debugger</i> keyword</p>
+<ol>
+    <li>Step by step click on each button.</li>
+    <li>Every time you click a button the debugger should stop at a <b>debugger</b> 
+        keyword in the Script panel.</li>
+    <li>Before you click the next button click on <b>Continue</b> (F8) debugger button.</li>
+</ol>
+
 <button onclick="breakSimple();">Break Simple</button>
+<button onclick="breakShallow();">Break Shallow</button>
+<button onclick="breakDeep();">Break Deep</button>
+<button onclick="loadXHRDebugger();">Break in XHR</button>
+<button onclick="loadScriptDebugger();">Break in Script</button>
+
+<br/><br/>
+
+<i>The execution context (yellow arrow on the left side) should be displyaed directly 
+at the row with the debugger keyword.</i>
 
 <script type="application/x-javascript" >
 function breakSimple()
 {
     debugger;   //@breakSimpleRow - don't remove this comment 
 }
+
+function breakShallow()
+{
+    var foo = "poo";
+    debugger;   //@breakShallowRow - don't remove this comment
+}
+
+function breakDeep()
+{
+    var foo = 42;
+    breakdeep2();
+}
+
+function breakdeep2()
+{
+    var fun = "no";
+    breakdeep3();
+    fun = "yes";
+    var stuff = 88;
+}
+
+function breakdeep3()
+{
+    var bar = "hello";
+    var baz = document.body;
+
+    var obj = {
+        touch:
+        function()
+        {
+            debugger;   //@breakDeepRow - don't remove this comment
+            this.touched = true;
+        }
+    };
+    obj.touch();
+}
+
+function loadXHRDebugger(callback)
+{
+    var req = new XMLHttpRequest();
+    req.onreadystatechange = function()
+    {
+        if (req.readyState == 4 && req.status == 200)
+        {
+            if (callback)
+                callback(req);
+
+            eval(req.responseText);
+            var f = 8;
+            var g = 9;
+        }
+    }
+
+    req.open("GET", "breakpoint1.js", true);
+    req.send(null);
+}
+
+var scriptLoaded = null;
+function loadScriptDebugger(callback)
+{
+    // Helper callback from loaded script test.
+    scriptLoaded = function() {
+        if (callback)
+            callback();
+    }
+
+    var script = document.createElement("script");
+    script.setAttribute("src", "breakpoint2.js");
+    document.body.appendChild(script);
+}
+
 </script>
 </body>
 </html>
