--- a/tests/content/examples/exampleNetTest.html
+++ b/tests/content/examples/exampleNetTest.html
@@ -10,20 +10,34 @@
 <ul>
     <li>Open Firebug UI and select Net panel.</li>
     <li>Press the <b>Run Test</b> button.</li>
-    <li>Open new entry in Net panel and check Response tab. It should be: 
+    <li>Open new entry in Net panel and check Response tab. It should be:
         <span style="color:green">Example test response.</span></li>
 </ul>
-<button onclick="runTest()">Run Test</button>
+<button id="runTestButton" onclick="onRunTestButton()">Run Test</button>
 <script>
-function runTest(callback)
+var times = 0;
+var button = document.getElementById("runTestButton");
+button.addEventListener("ReadyState4x200", function markEffort(event)
+{
+    window.dump("exampleNetTest.html markEffort");
+    times += 1;
+    event.target.innerHTML = "Run Again "+times;
+}, true);
+
+function onRunTestButton()
 {
     var request = new XMLHttpRequest();
-    request.onreadystatechange = function () {
-        if (request.readyState == 4 && request.status == 200 && callback)
+    request.onreadystatechange = function fireReadyState4x200() {
+        if (request.readyState == 4 && request.status == 200)
             setTimeout(function() {
-                callback(request);
+                var button = document.getElementById("runTestButton");
+                var event = document.createEvent("Events");
+                event.initEvent("ReadyState4x200", true, false);
+                console.log("now dispatch this event: ", event);
+                button.dispatchEvent(event);
             }, 300);
     };
+//    console.log(request.onreadystatechange);
 
     request.open("GET", "exampleNetTest.txt", true);
     request.send(null);
