--- a/tests/content/search/scriptVictim.htm
+++ b/tests/content/search/scriptVictim.htm
@@ -1,103 +1,16 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Search Test Victim This is not the test driver</title>
-    <script type="text/javascript" src="../env.js"></script>
-    <script type="text/javascript" src="search.js"></script>
+    <title>Search Test Page</title>
     <script type="text/javascript" src="script1.js"></script>
     <script type="text/javascript" src="script2.js"></script>
-    <script type="text/javascript">
-
-         function dummy() {
-            var panel = openAndSelectPanel("script");
-
-            setTimeout(function() {
-            enablePrivilege("UniversalXPConnect");
-            var text = "Script";
-
-            selectLocation(panel, /.*script.htm$/);
-            var tests = [
-                         {
-                             description: "Script Forward Case Insensitive",
-                             expected: 27,
-                             text: text,
-                             reverse: false,
-                             caseSensitive: false
-                         },
-                         {
-                             description: "Script Reverse Case Insensitive",
-                             expected: 27,
-                             text: text,
-                             reverse: true,
-                             caseSensitive: false
-                         },
-                         {
-                             description: "Script Forward Case Sensitive",
-                             expected: 9,
-                             text: text,
-                             reverse: false,
-                             caseSensitive: true
-                         },
-                         {
-                             description: "Script Reverse Case Sensitive",
-                             expected: 9,
-                             text: text,
-                             reverse: true,
-                             caseSensitive: true
-                         },//*,
-                         {
-                             description: "Global Script Forward Case Insensitive",
-                             expected: {
-                                 'script.htm': 27,
-                                 'script1.js': 5,
-                                 'script2.js': 1,
-                                 'search.js' : 3
-                             },
-                             text: text,
-                             reverse: false,
-                             caseSensitive: false,
-                             global: true
-                         },
-                         {
-                             description: "Global Script Reverse Case Insensitive",
-                             expected: {
-                                 'script.htm': 27,
-                                 'script1.js': 5,
-                                 'script2.js': 1,
-                                 'search.js' : 3
-                             },
-                             text: text,
-                             reverse: true,
-                             caseSensitive: false,
-                             global: true
-                         },
-                         {
-                             description: "Global Script Forward Case Sensitive",
-                             expected: {
-                                 'script.htm': 9,
-                                 'script1.js': 3
-                             },
-                             text: text,
-                             reverse: false,
-                             caseSensitive: true,
-                             global: true
-                         },
-                         {
-                             description: "Global Script Reverse Case Sensitive",
-                             expected: {
-                                 'script.htm': 9,
-                                 'script1.js': 3
-                             },
-                             text: text,
-                             reverse: true,
-                             caseSensitive: true,
-                             global: true
-                         }//*/
-                        ];
-            executeLineTestSuite(tests, panel.panelNode, function() { fireunit.testDone(); });
-            }, 1000);
-        };
-    </script>
 </head>
 <body>
+    <h1>Search Test Page</h1>
+    <p>This page is designed for automated search test.</p>
+    <div class="script scrIpt">Test Data</div>
+    <div class="scrIpt scrIpt">Test Data</div>
+    Script script
+    <iframe src="htmlIframe.htm" height="40"></iframe>
+    SCRIPT
 </body>
