--- a/diff/branches/firediff0.1/test/module/index.htm
+++ b/diff/branches/firediff0.1/test/module/index.htm
@@ -3,6 +3,14 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Firediff Test</title>
+    <style type="text/css">
+      #insertNode {
+        background-color: green;
+      }
+      div:after {
+        content: "test";
+      }
+    </style>
 </head>
 <body>
     <div id="insertNode"></div>
