Add some links, both target _blank and no target for testing activation
git-svn-id: http://fbug.googlecode.com/svn@2600 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/firebug/OpenFirebugOnThisPage.html
+++ b/tests/content/firebug/OpenFirebugOnThisPage.html
@@ -9,6 +9,11 @@ function f()
 </head>
 <body>
 <h1>Open Firebug On This Page</h1>
-
+<ul>
+<li><a id="sameTabOpen" href="AlsoOpenFirebugOnThisPage.html">Click to open another page in this tab, which should also have Firebug open</a></li>
+<li><a id="sameTabNotOpen" href="NeverOpenFirebugOnThisPage.html">Click to open another page in this tab, which should <strong>not</strong> have Firebug open</a></li>
+<li><a id="otherTabOpen" target="_blank" href="AlsoOpenFirebugOnThisPage.html">Click to open another page in a new tab, which should also have Firebug open</a></li>
+<li><a id="otherTabNotOpen" target="_blank" href="NeverOpenFirebugOnThisPage.html">Click to open another page in a new tab, which should <strong>not</strong> have Firebug open</a></li>
+</ul>
 </body>
 </html>
