--- a/tests/content/console/testErrors.html
+++ b/tests/content/console/testErrors.html
@@ -17,7 +17,9 @@
 <button id="throw" onclick="throwit()">Throw</button>
 <button id="thousandErrors" onclick="explode()">A Thousand Errors</button>
 
-<br/><br/>
+<br/>
+<button id="clickClick" onclick="clickClick()">Fire two errors via events</button>
+<br/>
 
 <script type="application/x-javascript">
 function deepError()
@@ -43,6 +45,21 @@ function explode()
 {
     for (var i = 0; i < 1000; ++i)
         setTimeout(new Function("b" + i + "();"), 0);
+}
+function clickClick()
+{
+    var deepError = document.getElementById('deepError');
+    var shallowError = document.getElementById('shallowError');
+
+    click(shallowError);
+    click(deepError);
+}
+function click(node)
+{
+        var doc = node.ownerDocument, event = doc.createEvent("MouseEvents");
+        event.initMouseEvent("click", true, true, doc.defaultView, 0, 0, 0, 0, 0,
+            false, false, false, false, 0, null);
+        return node.dispatchEvent(event);
 }
 </script>
 </body>
