--- a/diff/branches/firediff0.2/test/testList.html
+++ b/diff/branches/firediff0.2/test/testList.html
@@ -1,4 +1,4 @@
-﻿﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+﻿﻿﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -32,6 +32,7 @@ var testList = [
     
     {group: "lib",    uri: "lib/jsDiffTest.js",                     desc: "Lib: JS Diff" },
     {group: "lib",    uri: "lib/pathTest.js",                       desc: "Lib: Custom XPath Test" },
+    {group: "lib",    uri: "lib/cssPathTest.js",                   desc: "Lib: CSS Path Test" },
     
     {group: "event",  uri: "event/applyRevertTest.js",              desc: "Events: Apply Revert Test" },
     {group: "event",  uri: "event/attrMergeTest.js",                desc: "Events: Attribute Change Merge Test" },
