--- a/tests/content/console/reps/console_array.html
+++ b/tests/content/console/reps/console_array.html
@@ -14,6 +14,9 @@
             [ "array with multiple elements by Array constructor", new Array(1, "foo", window) ],
             [ "array with multiple undefined elements by Array constructor", new Array(3) ],
             [ "arguments object", (function() { return arguments; })(1, "foo", window) ],
+            [ "HTMLCollection (issue 588 / issue 489)", document.getElementsByTagName("div") ],
+            [ "NodeList (issue 588)", document.documentElement.childNodes ],
+            [ "sessionStorage (issue 1695)", window.sessionStorage ],
           ],
         };
         notArrayObjects = {
@@ -38,35 +41,107 @@
                 return arr;
               })()
             ],
-            [ "HTMLCollection (issue 588 / issue 489)", document.getElementsByTagName("div") ],
-            [ "NodeList (issue 588)", document.documentElement.childNodes ],
           ],
         };
       }
       function runTests() {
-        testGroup(arrayObjects);
-        testGroup(notArrayObjects);
-        testGroup(todoObjects);
+          testGroup("array", arrayObjects);
+          testGroup("notArray", notArrayObjects);
+          testGroup("array", todoObjects);
+      }
+      function showTests() {
+        showGroup(arrayObjects);
+        showGroup(notArrayObjects);
+        showGroup(todoObjects);
       }
       function output(name, obj) {
         console.log(name + "\r\n", obj);
       }
-      function testGroup(definition) {
+      function testGroup(kind, definition)
+      {
+          for (var i = 0; i < definition.objects.length; i++) {
+            console.log(kind, definition.objects[i][0], definition.objects[i][1]);
+          }
+      }
+      function showGroup(definition) {
         console.group(definition.description);
         for (var i = 0; i < definition.objects.length; i++) {
           output(definition.objects[i][0], definition.objects[i][1]);
         }
         console.groupEnd(definition.description);
       }
+
+      function createAllButtons()
+      {
+          var table = document.getElementById("buttonsHere");
+          createButtons("arrays", arrayObjects, table);
+          createButtons("notArrays", notArrayObjects, table);
+          createButtons("maybeArrays", todoObjects, table);
+      }
+
+      function createButtons(kind, category, table)
+      {
+          var div = document.createElement("div");
+          div.setAttribute('class', kind);
+          var label = document.createElement("span");
+          label.innerHTML = category.description;
+          div.appendChild(label);
+          var br = document.createElement('br');
+          div.appendChild(br);
+          for (var i = 0; i < category.objects.length; i++)
+          {
+              var button = document.createElement('button');
+              button.innerHTML = category.objects[i][0];
+              button.object = category.objects[i][1];
+              div.appendChild(button);
+          }
+          table.appendChild(div);
+      }
+
+      function huntBug(obj)
+      {
+          try
+          {
+              //if (obj instanceof Ci.nsIDOMHistory) // do this first to avoid security 1000 errors?
+              //    console.log("instanceof Ci.nsIDOMHistory", obj);
+              if (isFinite(obj.length) && typeof obj.splice === 'function')
+                  console.log("finite length with splice function", obj);
+              if (obj instanceof HTMLCollection)
+                  console.log("an HTMLCollection", obj);
+              if (obj instanceof NodeList)
+                  console.log("a NodeList", obj);
+              if (obj instanceof Storage)
+                  console.log("Storage", obj);
+          }
+          catch(exc)
+          {
+              console.log("FAILS:"+exc, exc);
+          }
+      }
+      function buggy()
+      {
+          var a = [];
+          console.log("a declared empty array");
+          huntBug(a);
+
+          var s = window.sessionStorage;
+          var properties = 0;
+          for (var name in s)
+              properties++;
+
+          console.log(properties+"properties includes length: "+sessionStorage.length);
+          huntBug(s);
+          console.log("sessionStorage after", s);
+      }
     </script>
   </head>
-  <body onload="defineObjects()">
+  <body onload="defineObjects();createAllButtons();">
     <div>
-      <button onclick="runTests()">run tests</button>
+      <button onclick="showTests()">show tests</button>
+      <button onclick="buggy()">hunt security 1000 bug</button>
+      <button id="runTests" onclick="defineObjects();runTests()">runTests</button>
     </div>
-    <h2>Array Tests from issue 1159, contribution by <a href="http://code.google.com/u/sevenfurnace/">sevenfurnace</a>
-    <pre>
-
-    </pre>
-  </body>
+    <h2>Array Tests from issue 1159, contribution by <a href="http://code.google.com/u/sevenfurnace/">sevenfurnace</a></h2>
+     <div id="buttonsHere"></div>
+       </body>
 </html>
