changes to search test to sync with changes in script panel
git-svn-id: http://fbug.googlecode.com/svn@2672 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/search/scriptVictim.htm
+++ b/tests/content/search/scriptVictim.htm
@@ -4,6 +4,9 @@
     <title>Search Test Page</title>
     <script type="text/javascript" src="script1.js"></script>
     <script type="text/javascript" src="script2.js"></script>
+    <script type="text/javascript">
+    var ourFriendOld = "foo";
+    </script>
 </head>
 <body>
     <h1>Search Test Page</h1>
