--- a/tests/content/search/htmlIframe.htm
+++ b/tests/content/search/htmlIframe.htm
@@ -2,6 +2,12 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Search Test</title>
+    <script type="text/javascript">
+    function bar()
+    {
+        return "foo";
+    }
+    </script>
 </head>
 <body>
     <div class="script scrIpt">Test Data</div>
