Initial (incomplete) checkin for the CSS model functionality and tests.
TODOs abound. Why can't there be a cloneNode for CSS objects...

git-svn-id: http://fbug.googlecode.com/svn@2852 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/test/testList.html
+++ b/diff/branches/firediff0.2/test/testList.html
@@ -33,6 +33,7 @@ var testList = [
     {group: "lib",    uri: "lib/jsDiffTest.js",                     desc: "Lib: JS Diff" },
     {group: "lib",    uri: "lib/pathTest.js",                       desc: "Lib: Custom XPath Test" },
     {group: "lib",    uri: "lib/cssPathTest.js",                   desc: "Lib: CSS Path Test" },
+    {group: "lib",    uri: "lib/cssModelTest.js",                   desc: "Lib: CSS Model Test" },
     
     {group: "event",  uri: "event/applyRevertTest.js",              desc: "Events: Apply Revert Test" },
     {group: "event",  uri: "event/attrMergeTest.js",                desc: "Events: Attribute Change Merge Test" },
