Fix setTimeout in console/panelContentAfterReopen test + better description fro manual testing + testPage attribute in the test list.
git-svn-id: http://fbug.googlecode.com/svn@3109 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/console/panelContentAfterReopen.html
+++ b/tests/content/console/panelContentAfterReopen.html
@@ -8,7 +8,7 @@
 <ul>
     <li>Open Firebug UI and enable Console panel.</li>
     <li>Click on the button below to create a simple log.</li>
-    <li>Close and open Firebug UI.</li>
+    <li>Close and open Firebug UI by clicking on the status bar icon.</li>
     <li>Verify that the log is still within the Console panel.</li>
 </ul>
 
