firediff part of manual test verfication patch from kpdecker.
git-svn-id: http://fbug.googlecode.com/svn@3350 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/test/testList.html
+++ b/diff/branches/firediff0.2/test/testList.html
@@ -40,7 +40,9 @@ var testList = [
     {group: "event",  uri: "event/charDataMergeTest.js",            desc: "Events: Char Data Change Merge Test" },
     {group: "event",  uri: "event/insertMergeTest.js",              desc: "Events: Insert Node Merge Test" },
     {group: "event",  uri: "event/removeMergeTest.js",              desc: "Events: Remove Node Merge Test" },
-    {group: "event",  uri: "event/cssMergeTest.js",                 desc: "Events: CSS Merge Test" }
+    {group: "event",  uri: "event/cssMergeTest.js",                 desc: "Events: CSS Merge Test" },
+
+    {group: "manual", uri: "manual/manualAutomation.js",            desc: "Manual: Manual display test with scripted setup" }
 ];
 </script>
 </body>
