--- a/diff/branches/firediff1.0/test/testList.html
+++ b/diff/branches/firediff1.0/test/testList.html
@@ -30,7 +30,7 @@ var testList = [
     {group: "module", uri: "module/domEditorTest.js",               desc: "Diff Module: DOM Editor Generated Events" },
     {group: "module", uri: "module/cssEditorTest.js",               desc: "Diff Module: CSS Editor Generated Events" },
     
-    {group: "lib",    uri: "lib/jsDiffTest.js",                     desc: "Lib: JS Diff",   category: "fails" },
+    {group: "lib",    uri: "lib/jsDiffTest.js",                     desc: "Lib: JS Diff" },
     {group: "lib",    uri: "lib/pathTest.js",                       desc: "Lib: Custom XPath Test" },
     {group: "lib",    uri: "lib/cssPathTest.js",                   desc: "Lib: CSS Path Test" },
     {group: "lib",    uri: "lib/cssModelTest.js",                   desc: "Lib: CSS Model Test" },
