Mostly changes to use FirebugFBTest.testDone() which adds clean up then calls FBTest.testDone().
git-svn-id: http://fbug.googlecode.com/svn@3798 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/console/882/driver.html
+++ b/tests/content/console/882/driver.html
@@ -54,7 +54,7 @@ function checkConsoleSourceLinks(elt)
     sourceLineHighlight.onRecognize(function sawHighlight(elt)
         {
             FBTest.compare("sourceRow jumpHighlight", elt.getAttribute("class"), "Line is highlighted");  // shown in the Test Console
-            FBTest.testDone("882 DONE");
+            FBTestFirebug.testDone("882 DONE");
         });
 
     FBTest.progress("Click the 'external' source link");
