--- a/tests/content/search/console.htm
+++ b/tests/content/search/console.htm
@@ -25,7 +25,7 @@
                     logPanel.getElementsByClassName("matched").length,
                     2,
                     "Filter matched 2 items");
-            FBTest.testDone();
+            FBTestFirebug..testDone();
         };
     </script>
 </head>
