--- a/tests/content/search/css.htm
+++ b/tests/content/search/css.htm
@@ -84,7 +84,7 @@
                              global: true
                          }
                         ];
-            executeRangeTestSuite(tests, cssPanel.panelNode, function() { FBTest.testDone(); });
+            executeRangeTestSuite(tests, cssPanel.panelNode, function() { FBTestFirebug.testDone(); });
             }, 500);
         };
     </script>
