--- a/tests/content/search/dom.htm
+++ b/tests/content/search/dom.htm
@@ -42,7 +42,7 @@
                              caseSensitive: true
                          }
                         ];
-            executeRangeTestSuite(tests, htmlPanel.panelNode, function() { FBTest.testDone(); });
+            executeRangeTestSuite(tests, htmlPanel.panelNode, function() { FBTestFirebug.testDone(); });
             }, 500);
         };
     </script>
