--- a/tests/content/search/domWalker.htm
+++ b/tests/content/search/domWalker.htm
@@ -62,7 +62,7 @@
             domWalkerTest(expected, 5, false);
             domWalkerTest(expected, 4, true);
             domWalkerBoundaryTest();
-            FBTest.testDone();
+            FBTestFirebug.testDone();
         };
     </script>
 </head>
