--- a/tests/content/search/net.htm
+++ b/tests/content/search/net.htm
@@ -42,7 +42,7 @@
                              caseSensitive: true
                          }
                         ];
-            executeRangeTestSuite(tests, netPanel.panelNode, function() { FBTest.testDone(); });
+            executeRangeTestSuite(tests, netPanel.panelNode, function() { FBTestFirebug.testDone(); });
             });
         };
     </script>
