--- a/tests/issues/issue795.html
+++ b/tests/issues/issue795.html
@@ -7,16 +7,7 @@
         <script type="application/javascript;version=1.7">
 var foo = function(){};
 foo.prototype.foo = 'bar';
-
-</script>
-<script type"application/javascript;version=1.7">
-var toggles = {}
-var name = "prototype";
-if (toggles.hasOwnProperty(name))
-    toggles = toggles[name];
-else
-    toggles = toggles[name] = {};
-console.log(toggles);
+console.log("Here is your foo:", foo);
 </script>
 
     </head>
