Adapt net/846 test to run online (getfirebug.com)
git-svn-id: http://fbug.googlecode.com/svn@3975 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/net/846/Issue846.htm
+++ b/tests/content/net/846/Issue846.htm
@@ -31,7 +31,8 @@
     var status = document.getElementById("Status");
     var button = document.getElementById("Button");
     var callback = null;
-    
+    var responses = [];
+
     function runTest(callb)
     {
         callback = callb;
@@ -49,6 +50,8 @@
         {
             if (request.readyState == 4 && request.status == 200) 
             {
+                responses.push(request.responseText);
+
                 if (counter < 4) 
                 {
                     counter++;
@@ -62,7 +65,7 @@
 
                     if (callback) {
                         setTimeout(function() {
-                            callback(request);
+                            callback(responses);
                         }, 300);
                     }
                 }
