--- a/tests/content/net/369/issue369.htm
+++ b/tests/content/net/369/issue369.htm
@@ -31,32 +31,32 @@
 <script type="text/javascript">
 function makeRequest1(callback)
 {
-    makeRequest("/net/369/issue369-1.txt", callback);
+    makeRequest("issue369-1.txt", callback);
 }
 
 function makeRequest2(callback)
 {
-    makeRequest("/net/369/issue369-2.txt", callback);
+    makeRequest("issue369-2.txt", callback);
 }
 
 function makeRequest3(callback)
 {
-    makeRequest("/net/369/issue369-3.txt", callback);
+    makeRequest("issue369-3.txt", callback);
 }
 
 function makeRequest4(callback)
 {
-    makeRequest("/net/369/issue369-4.txt", callback);
+    makeRequest("issue369-4.txt", callback);
 }
 
 function makeRequest5(callback)
 {
-    makeRequest("/net/369/issue369-5.txt", callback);
+    makeRequest("issue369-5.txt", callback);
 }
 
 function makeRequest6(callback)
 {
-    makeRequest("/net/369/issue369-6.txt", callback);
+    makeRequest("issue369-6.txt", callback);
 }
 
 function makeRequest(url, callback) 
