--- a/tests/content/net/601/issue601.html
+++ b/tests/content/net/601/issue601.html
@@ -47,6 +47,8 @@ function postRequest(postData, callback)
 
         var request = new XMLHttpRequest();
         request.open("POST", "issue601.php", true);
+        request.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+        request.setRequestHeader("Content-Length", postData.length);
 
         request.onreadystatechange = function()
         {
