Adapt Adapt net/846 test to run online (getfirebug.com)
git-svn-id: http://fbug.googlecode.com/svn@3987 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/net/846/Issue846.htm
+++ b/tests/content/net/846/Issue846.htm
@@ -73,7 +73,7 @@
         }
 
         var time = (new Date()).getTime();
-        request.open("POST", "issue846.php", true);
+        request.open("POST", "Issue846.php", true);
         request.send(counter);
     }
 </script>
