Fix wrapAJSFile so it isn't binded with chrome://FirebugTests extension, better history management, don't start httpd if test drivers come from http already, tracing improved.
git-svn-id: http://fbug.googlecode.com/svn@4066 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.5/content/wrapAJSFile.html
+++ b/fbtest/branches/fbtest1.5/content/wrapAJSFile.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Firebug Test Page HTML Wrapper</title>
-<script type="application/x-javascript" src="chrome://firebugTests/content/FBTestFirebug.js"></script>
-<script type="application/x-javascript" src="__replaceme__"></script>
+<script type="application/x-javascript" src="__FBTestFirebugURL__"></script>
+<script type="application/x-javascript" src="__TestDriverURL__"></script>
 </head>
 <body>
 <span id="firebugTestElement"></span>
