--- a/tests/content/script/singleStepping/index.html
+++ b/tests/content/script/singleStepping/index.html
@@ -3,21 +3,28 @@
 
 <html lang="en">
 <head>
-	<!-- Date: 2009-03-17 -->
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Single Step Tests</title>
-	<script src="fibonacci.js" type="text/javascript"></script>
-	<script type="text/javascript" charset="utf-8">
-	   var iter = 0;
-	   
-	   function clicker() {
-	     dataDiv = document.getElementById("data");
-	     dataDiv.innerHTML += fibonacci(iter++) + "<br/>";
+    <!-- Date: 2009-03-17 -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Single Step Tests</title>
+    <script src="fibonacci.js" type="text/javascript"></script>
+    <script type="text/javascript" charset="utf-8">
+       var iter = 0;
+
+       function clicker() {
+         dataDiv = document.getElementById("data");
+         dataDiv.innerHTML += fibonacci(iter++) + "<br/>";
      }
-	</script>
+    </script>
 </head>
 <body>
-
+<h1>Test Single Stepping</h1>
+<ol>
+<li>selectFile index.html</li>
+<li>click breakOnNext, then button: should land on line 2 of index.html/event</li>
+<li>click stepInto: should land on line 14 of index.html</li>
+<li>click stepOver: should land on line 15 of index.html</li>
+<li>click stepOut: should land on line 2 of index.html/event</li>
+</ol>
   <div id="head">
       <h3>fib script test<h3>
       <button id="clicker" type="button" onClick="clicker();">Click me</button>
