--- a/tests/content/testlists/firebug1.4.html
+++ b/tests/content/testlists/firebug1.4.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+﻿﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <title>Firebug Test Console</title>
     <script type="text/javascript" src="testListUtils.js"></script>
 </head>
 <body>
@@ -26,7 +27,7 @@ var serverURI = driverBaseURI;
  *                              opening of the test page from FBTest console (context menu "Open Test Page").
  */
 var testList = [
-    {group: "firebug", uri: "firebug/allOpenAllClose1.5.js",              desc: "First test: all open and all close"},
+    {group: "firebug", uri: "firebug/allOpenAllClose1.5.js",           desc: "First test: all open and all close"},
     {group: "firebug", uri: "firebug/openInNewWindow.js",              desc: "Firebug opened in a new window" },
     {group: "firebug", uri: "firebug/viralActivation.js",              desc: "Links from active pages should be active" },
     {group: "firebug", uri: "firebug/activeContextAfterReload.js",     desc: "Reloading a FF tab with Firebug open." },
@@ -48,32 +49,28 @@ var testList = [
     {group: "console", uri: "console/onreadystatechange.js",           desc: "Log an onreadystatechange function." },
     {group: "console", uri: "console/issue1591.js",                    desc: "Issue 1591: Firebug cannot find _firebugConsole element." },
     {group: "console", uri: "console/reps/console_array.js",           desc: "Rendering of Array and Array-like objects." },
-    {group: "console", uri: "console/1693/issue1693.js",               desc: "[php] Viewing requests with large message bodies in Console tab temporarily freezes browser", testPage: "console/1693/issue1693.html" },
+    {group: "console", uri: "console/1693/issue1693.js",               desc: "Viewing requests with large message bodies in Console tab temporarily freezes browser", testPage: "console/1693/issue1693.html" },
     {group: "console", uri: "console/872/872.js",                      desc: "Show errors from reloaded iframes", testPage: "console/872/main.html" },
     {group: "console", uri: "console/882/issue882.js",                 desc: "Issue 882: console.log() reports wrong source file and line number", testPage: "console/882/issue882.html"},
     {group: "dom",     uri: "dom/1738/1738.js",                        desc: "Editing DOM values", testPage: "dom/1738/main.html" },
-    {group: "net",     uri: "net/1256/issue1256.js",                   desc: "Issue 1256: Firebug displays spaces as plus signs in POST fields", testPage: "net/1256/issue1256.html" },
-    {group: "net",     uri: "net/1275/issue1275.js",                   desc: "Issue 1275: firebug does not show JSON answers from server", testPage: "net/1275/issue1275.htm" },
-    {group: "net",     uri: "net/1461/issue1461.js",                   desc: "Issue 1461: Failed to load source for sourceFile (FF 3.0.6 FireBug 1.3.2)" },
-    {group: "net",     uri: "net/1456/issue1456.js",                   desc: "Issue 1456: XMLHttpRequest / Response totally wrong", testPage: "net/1456/issue1456.htm" },
-    {group: "net",     uri: "net/846/issue846.js",                     desc: "Issue 846: Wrong data with XMLHttpRequest", testPage: "net/846/Issue846.htm" },
-    {group: "net",     uri: "net/369/issue369.js",                     desc: "Issue 369: Inspect JSON data in HTTP responses", testPage: "net/369/issue369.htm" },
+    {group: "net",     uri: "net/1256/issue1256.js",                   desc: "Issue1256: Firebug displays spaces as plus signs in POST fields", testPage: "net/1256/issue1256.html" },
+    {group: "net",     uri: "net/1275/issue1275.js",                   desc: "Issue1275: firebug does not show JSON answers from server" },
+    {group: "net",     uri: "net/1461/issue1461.js",                   desc: "Issue1461: Failed to load source for sourceFile (FF 3.0.6 FireBug 1.3.2)" },
+    {group: "net",     uri: "net/1456/issue1456.js",                   desc: "Issue1456: XMLHttpRequest / Response totally wrong" },
+    {group: "net",     uri: "net/846/issue846.js",                     desc: "Issue846: Wrong data with XMLHttpRequest" },
+    {group: "net",     uri: "net/369/issue369.js",                     desc: "Issue 369: Inspect JSON data in HTTP responses" },
     {group: "net",     uri: "net/1299/issue1299Driver.js",             desc: "Issue 1299: Failed to load source for sourceFile." },
     {group: "net",     uri: "net/activation/activation.js",            desc: "Verify Net panel content after activation on more tabs (Firebug opened within Firefox)." },
-    {group: "net",     uri: "net/372/issue372.js",                     desc: "Issue 372: Outgoing XML isn't displayed in 'post'-tab", testPage: "net/372/issue372.html" },
-    {group: "net",     uri: "net/1468/issue1468.js",                   desc: "Issue 1468: File Locking on File upload when firebug is installed", testPage: "net/1468/issue1468.html" },
+    {group: "net",     uri: "net/372/issue372-1.4.js",                 desc: "Issue 372: Outgoing XML isn't displayed in 'post'-tab", testPage: "net/372/issue372.html" },
+    {group: "net",     uri: "net/1468/issue1468.js",                   desc: "Issue 1468: File Locking on File upload when firebug is installed" },
     {group: "net",     uri: "net/1308/issue1308.js",                   desc: "Issue 1308: Missing URL-Encoding of reserved characters when using 'Copy Location with Parameters' from Net Panel" },
     {group: "net",     uri: "net/601/issue601.js",                     desc: "Issue 601: XHR in console shows stale/cached output", testPage: "net/601/issue601.html"},
     {group: "net",     uri: "net/700/issue700.js",                     desc: "Issue 700: HTML preview for net responses" },
-    {group: "net",     uri: "net/176/issue176.js",                     desc: "Issue 176: net flash tab not recognising flv files", testPage: "net/176/issue176.html" },
+    {group: "net",     uri: "net/176/issue176.js",                     desc: "Issue 176: net flash tab not recognising flv files" },
     {group: "net",     uri: "net/listeners/netInfoBodyListener.js",    desc: "netInfoBody listener test" },
     {group: "net",     uri: "net/1764/issue1764.js",                   desc: "Net panel misses page load.", testPage: "net/1764/issue1764-1.html" },
-    {group: "net",     uri: "net/1867/issue1867.js",                   desc: "File locked after upload: after uploading a file to a website (via a form) the file handle is not closed", testPage: "net/1867/issue1867.html" },
-    {group: "net",     uri: "net/2221/issue2221.js",                   desc: "Issue 2221: POST variables disappear if they contain non-english characters", testPage: "net/2221/issue2221.html" },
-    {group: "net",     uri: "net/1862/issue1862.js",                   desc: "Enhancement :: create xml tab in request item of net tab", testPage: "net/1862/issue1862.html" },
     {group: "search",  uri: "search/scriptPanelSearch.js",             desc: "Search within the Script panel" },
     {group: "search",  uri: "search/netPanelSearch.js",                desc: "Search within the Net panel", testPage: "search/netVictim.htm" },
-    {group: "chrome",  uri: "chrome/1883/issue1883.js",                desc: "domplate.insertRows properties" },
     {group: "examples", uri: "examples/exampleTest.html",              desc: "Simple test example." },
     {group: "examples", uri: "examples/exampleNetTest.js",             desc: "Example of a Net panel test." },
 ];
