--- a/tests/content/testlists/firebug1.4.html
+++ b/tests/content/testlists/firebug1.4.html
@@ -1,12 +1,18 @@
 ﻿﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <title>Firebug Test Console</title>
+    <title>Firebug 1.4 Test List</title>
     <script type="text/javascript" src="testListUtils.js"></script>
+    <link rel="stylesheet" href="testList.css" type="text/css"/>
 </head>
 <body>
+<h1>Firebug 1.4 Test List</h1>
+<div><span>Test driver base URI: </span><span id="driverURI"></span></div>
+<div<span>Test case base URI: </span><span id="testcaseURI"></span></div>
+<h2>Test Groups</h2>
+<div id="testList"></div>
+
 <script type="text/javascript">
 /**
  * Root directory of the test tree. If it's empty, the parent directory of this file
@@ -75,12 +81,6 @@ var testList = [
     {group: "examples", uri: "examples/exampleNetTest.js",             desc: "Example of a Net panel test." },
 ];
 </script>
-
-<h1>Firebug 1.4 Test List</h1>
-<div><span>Test driver base URI: </span><span id="driverURI"></span></div>
-<div<span>Test case base URI: </span><span id="testcaseURI"></span></div>
-<h2>Tests</h2>
-<div id="testList"></div>
 
 </body>
 </html>
