Don't generate the web UI if the list is loaded into Firebug test console.
git-svn-id: http://fbug.googlecode.com/svn@4237 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/testlists/firebug1.5.html
+++ b/tests/content/testlists/firebug1.5.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="testList.css" type="text/css"/>
 </head>
 <body>
-<h1>Firebug 1.5 Test List</h1>
-<div><span>Test driver base URI: </span><span id="driverURI"></span></div>
-<div<span>Test case base URI: </span><span id="testcaseURI"></span></div>
-<h2>Test Groups</h2>
-<div id="testList"></div>
 
 <script type="text/javascript">
 /**
@@ -85,6 +80,12 @@ var testList = [
     {group: "examples", uri: "examples/exampleNetTest.js",             desc: "Example of a Net panel test." },
 ];
 </script>
+
+<h1>Firebug 1.5 Test List</h1>
+<div><span>Test driver base URI: </span><span id="driverURI"></span></div>
+<div<span>Test case base URI: </span><span id="testcaseURI"></span></div>
+<h2>Test Groups</h2>
+<div id="t"></div>
 
 </body>
 </html>
