--- a/tests/content/testlists/firebug1.4.html
+++ b/tests/content/testlists/firebug1.4.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="testList.css" type="text/css"/>
 </head>
 <body>
-<h1>Firebug 1.4 Test List</h1>
-<div><span>Test driver base URI: </span><span id="driverURI"></span></div>
-<div<span>Test case base URI: </span><span id="testcaseURI"></span></div>
-<h2>Test Groups</h2>
-<div id="testList"></div>
 
 <script type="text/javascript">
 /**
@@ -81,6 +76,12 @@ var testList = [
     {group: "examples", uri: "examples/exampleNetTest.js",             desc: "Example of a Net panel test." },
 ];
 </script>
+
+<h1>Firebug 1.4 Test List</h1>
+<div><span>Test driver base URI: </span><span id="driverURI"></span></div>
+<div<span>Test case base URI: </span><span id="testcaseURI"></span></div>
+<h2>Test Groups</h2>
+<div id="tests"></div>
 
 </body>
 </html>
