--- a/tests/content/testlists/firebug1.5.html
+++ b/tests/content/testlists/firebug1.5.html
@@ -85,7 +85,7 @@ var testList = [
 <div><span>Test driver base URI: </span><span id="driverURI"></span></div>
 <div<span>Test case base URI: </span><span id="testcaseURI"></span></div>
 <h2>Test Groups</h2>
-<div id="t"></div>
+<div id="tests"></div>
 
 </body>
 </html>
