--- a/diff/branches/firediff1.0/test/testList.html
+++ b/diff/branches/firediff1.0/test/testList.html
@@ -44,6 +44,8 @@ var testList = [
     {group: "event",  uri: "event/cssMergeTest.js",                 desc: "Events: CSS Merge Test" },
     {group: "event",  uri: "event/revertMergeTest.js",                desc: "Events: Revert Merge Test" },
 
+    {group: "snapshot", uri: "snapshot/domDiffWalker.js",          desc: "Snapshot: DOM Diff Walker Test" },
+
     {group: "manual", uri: "manual/manualAutomation.js",            desc: "Manual: Manual display test with scripted setup" }
 ];
 </script>
