Update test page for test script/debuggerKeyword.
git-svn-id: http://fbug.googlecode.com/svn@4400 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/script/debuggerKeyword/testPage.html
+++ b/tests/content/script/debuggerKeyword/testPage.html
@@ -12,11 +12,11 @@
     <li>Before you click the next button click on <b>Continue</b> (F8) debugger button.</li>
 </ol>
 
-<button onclick="debuggerSimple();">debugger Simple</button>
-<button onclick="debuggerShallow();">debugger Shallow</button>
-<button onclick="debuggerDeep();">debugger Deep</button>
-<button onclick="loadXHRDebugger();">debugger in XHR</button>
-<button onclick="loadScriptDebugger();">debugger in Script</button>
+<button id="debuggerSimple" onclick="debuggerSimple();">debugger Simple</button>
+<button id="debuggerShallow" onclick="debuggerShallow();">debugger Shallow</button>
+<button id="debuggerDeep" onclick="debuggerDeep();">debugger Deep</button>
+<button id="debuggerInXHR" onclick="loadXHRDebugger();">debugger in XHR</button>
+<button id="debuggerInScript" onclick="loadScriptDebugger();">debugger in Script</button>
 
 <br/><br/>
 
