--- a/diff/branches/firediff1.0/test/testList.html
+++ b/diff/branches/firediff1.0/test/testList.html
@@ -46,6 +46,8 @@ var testList = [
 
     {group: "snapshot", uri: "snapshot/domDiffWalker.js",          desc: "Snapshot: DOM Diff Walker Test" },
 
+    {group: "formatter", uri: "formatter/cssFormatterTest.js",          desc: "Formatter: CSS Formatter Test" },
+
     {group: "manual", uri: "manual/manualAutomation.js",            desc: "Manual: Manual display test with scripted setup" }
 ];
 </script>
