--- a/tests/content/console/testErrors.html
+++ b/tests/content/console/testErrors.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Breakpoints Test Page</title>
+    <title>Console Error Reporting Test Page</title>
 </head>
 <body>
 <h1>Errors Tests</h1>
