Cleanup debug code.
git-svn-id: http://fbug.googlecode.com/svn@4703 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/html/onMutate.html
+++ b/tests/content/html/onMutate.html
@@ -17,40 +17,40 @@
 <body>
 
 Mutate Text:
-<div id="mutateText" onclick="onMutateText('mutateText')">&nbsp;<div></div></div>
+<div id="mutateText">&nbsp;<div></div></div>
 
 Mutate Text Inline:
-<div id="mutateTextInline" onclick="onMutateText('mutateTextInline')">Test</div>
+<div id="mutateTextInline">Test</div>
 
 Mutate Node:
-<div id="mutateNode" onclick="onMutateNode('mutateNode')">&nbsp;<div></div></div>
+<div id="mutateNode">&nbsp;<div></div></div>
 
 Mutate Node Text:
-<div id="mutateNodeText" onclick="onMutateNode('mutateNodeText')">Test</div>
+<div id="mutateNodeText">Test</div>
 
 Mutate Node Empty:
-<div id="mutateNodeEmpty" onclick="onMutateNode('mutateNodeEmpty')"></div>
+<div id="mutateNodeEmpty"></div>
 
 Remove Node:
-<div id="removeNode" onclick="onRemoveNode('removeNode', 1)">&nbsp;<div></div></div>
+<div id="removeNode">&nbsp;<div></div></div>
 
 Remove Node Text:
-<div id="removeNodeText" onclick="onRemoveNode('removeNodeText', 0)">Test<div></div></div>
+<div id="removeNodeText">Test<div></div></div>
 
 Remove Node Empty:
-<div id="removeNodeEmpty" onclick="onRemoveNode('removeNodeEmpty', 0)">Test</div>
+<div id="removeNodeEmpty">Test</div>
 
 Mutate Attr New:
-<div id="mutateAttrNew" onclick="onMutateAttr('mutateAttrNew', 'title', 'boo')"><div></div></div>
+<div id="mutateAttrNew"><div></div></div>
 
 Mutate Attr Set:
-<div id="mutateAttrSet" onclick="onMutateAttr('mutateAttrSet', 'title', 'boo')"><div title="test"></div></div>
+<div id="mutateAttrSet"><div title="test"></div></div>
 
 Mutate Attr Remove:
-<div id="mutateAttrRemove" onclick="onMutateAttr('mutateAttrRemove', 'title')"><div title="test"></div></div>
+<div id="mutateAttrRemove"><div title="test"></div></div>
 
 Mutate Test Race Condition:
-<div id="mutateRemovedRace" onclick="onMutateRemovedRace('mutateRemovedRace')">&nbsp;<div></div></div>
+<div id="mutateRemovedRace">&nbsp;<div></div></div>
 
 </body>
 </html>
